# fitwithgit.com

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  FIT_LOG_SPEC.md  README.md
.claude/skills/fit-tracker/: SKILL.md
.github/workflows/: ci.yml
integrations/garmin/: Cargo.toml
integrations/garmin/src/: client.rs  main.rs  mapping.rs
integrations/mcp/: Cargo.toml
integrations/mcp/src/: data.rs  main.rs  tools.rs
integrations/whoop/: Cargo.toml  run-sync.sh
integrations/whoop/src/: auth.rs  client.rs  main.rs  mapping.rs
src/: data.rs  main.rs
templates/: base.html  index.html  repo.html
templates/components/: activity_graph.html  greeting.html
