[package]
name = "tirana"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }
axum = "0.8"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tracing-subscriber = "0.3"
